syntax = "proto3";

package main;

option go_package = "./proto";

message Splitter {
  string training_id = 1;
  string repo_url = 2;
}

message Training {
  string training_id = 1;
  string model_id = 2;
}

message Validation {
  string training_id = 1;
  repeated ModelScore models_scores = 2;
}

message ModelScore {
  string model_id = 1;
  int32 score = 2;
}